# microwatershed-impact-assessment

./: .env  .gitignore  README.md  app.py  make_catchments.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
2025-07-30_1635/: branches.dbf  branches.shp  branches.shx
2025-08-11_1313/: branches.dbf  branches.shx
2025-08-11_1314/: branches.shp
2025-08-11_1322/: branches.shp
2025-08-11_1323/: branches.dbf  branches.shx
2025-08-11_1337/: branches.dbf  branches.shp  branches.shx
2025-08-12_1418/: branches.dbf  branches.shp  branches.shx
2025-08-12_1420/: branches.dbf  branches.shp  branches.shx
2025-08-12_1425/: branches.dbf  branches.shp  branches.shx
2025-08-12_1435/: branches.dbf  branches.shp  branches.shx
2025-08-12_1437/: branches.dbf  branches.shp  branches.shx
2025-08-12_1439/: branches.dbf  branches.shp  branches.shx
2025-08-12_1445/: branches.dbf  branches.shp  branches.shx
2025-08-12_1446/: branches.dbf  branches.shp  branches.shx
app/: app.py
data-inputs/Annual-Rainfall/: PRISM_ppt_30yr_normal_4kmM4_01_bil.stx  PRISM_ppt_30yr_normal_4kmM4_04_bil.bil.aux.xml  PRISM_ppt_30yr_normal_4kmM4_04_bil.stx  PRISM_ppt_30yr_normal_4kmM4_09_bil.bil.aux.xml  PRISM_ppt_30yr_normal_4kmM4_09_bil.stx  PRISM_ppt_30yr_normal_4kmM4_annual_asc.asc.aux.xml  PRISM_ppt_30yr_normal_4kmM4_annual_bil.bil.aux.xml  prism_4269_export.tif  prism_ppt_30y_export.bil  prism_ppt_30y_export.hdr  prism_ppt_30y_export.tfw  prism_ppt_30y_export.tif.aux.xml
data-inputs/IRL-boundary/: IRL-AOI.sbn  (+11 more)
scripts/: main.py
tests/: test_pysheds.py  test_whitebox.py
(+165 files in other folders)
