[project]
name = "microwatershed-impact-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.0.1",
    "leafmap>=0.48.6",
    "matplotlib>=3.9.4",
    "numpy<2.0",
    "pandas>=2.3.1",
    "pyproj>=3.6.1",
    "pysheds>=0.4",
    "rasterio>=1.4.3",
    "rioxarray>=0.15.0",
    "shapely>=2.0.7",
    "streamlit>=1.46.1",
    "streamlit-folium>=0.25.0",
    "xarray>=2024.7.0",
]
